--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -43,4 +43,8 @@
     .plate {
         @apply font-mono font-bold uppercase;
     }
+
+    .btn-danger {
+        @apply text-white bg-red-600 hover:bg-red-500;
+    }
 }
